updated profile pic on user page, updated profile pic on review card, fixed spacing for bookshelf display when empty

--- a/src/app.css
+++ b/src/app.css
@@ -51,7 +51,7 @@ h1 {
 	}
 
 	.profile_pic_small {
-		@apply w-14 h-14 bg-gray-600 rounded-full overflow-hidden flex justify-center items-center;
+		@apply w-14 h-14 bg-primary-1 rounded-full overflow-hidden flex justify-center items-center;
 	}
 
 	.profile_pic_large {
